# pipeline-hatch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: database.yaml  dcc.yaml  projects.yaml
launcher/: __init__.py  main.py
launcher/core/: config_manager.py  dcc_manager.py
launcher/database/: database.py  models.py  repository.py
launcher/dcc/: __init__.py  base_dcc.py  dcc_houdini.py  dcc_maya.py  dcc_nuke.py
launcher/ui/: main_window.py  settings_window.py
launcher/ui/imgs/: pipeline_hatch.icns
launcher/ui/widgets/: __init__.py  file_tree.py  project_tree.py  role_selector.py  seq_shot_tree.py
launcher/utils/: __init__.py  logger.py
plan/: Pipeline launcher rebuild phase 1.md  Pipeline launcher rebuild phase 2.md
tests/: conftest.py  test_config.py  test_dcc.py  test_dcc_manager.py  test_logger.py  test_settings.py  test_widgets.py
